add pressure plates to creative tab